crates/azalea-core/src/resolver/snapshots/azalea_core__resolver__resolver_tests__basic_variable_definition.snap
---
source: crates/azalea-core/src/resolver/resolver_tests.rs
expression: "format!(\"{:#?}\", resolver)"
---
Resolver {
    scopes: [
        Scope {
            variables: {
                "x": Int,
            },
            functions: {},
        },
    ],
}
