crates/azalea-core/src/resolver/snapshots/azalea_core__resolver__resolver_tests__does_allow_redefinition.snap
---
source: crates/azalea-core/src/resolver/resolver_tests.rs
expression: "format!(\"{:#?}\", resolver)"
---
Resolver {
    scopes: [
        Scope {
            variables: {
                "x": String,
            },
            functions: {},
        },
    ],
}
