crates/azalea-core/src/resolver/snapshots/azalea_core__resolver__resolver_tests__errors_on_redefinition.snap
---
source: crates/azalea-core/src/resolver/resolver_tests.rs
expression: "format!(\"Result: {:#?}\\nResolver: {:#?}\", result, resolver)"
---
Result: Err(
    RedefinedVariable(
        "x",
    ),
)
Resolver: Resolver {
    scopes: [
        Scope {
            variables: {
                "x": Int,
            },
            functions: {},
        },
    ],
}
