crates/azalea-core/src/resolver/snapshots/azalea_core__resolver__resolver_tests__function_definition_and_lookup.snap
---
source: crates/azalea-core/src/resolver/resolver_tests.rs
expression: "format!(\"{:#?}\", resolver)"
---
Resolver {
    scopes: [
        Scope {
            variables: {},
            functions: {
                "test_func": Fn(
                    Function {
                        name: "test_func",
                        args: [
                            (
                                "x",
                                Int,
                            ),
                        ],
                        return_ty: String,
                        body: None,
                        body_expr: None,
                    },
                ),
            },
        },
    ],
}
