crates/azalea-core/src/resolver/snapshots/azalea_core__resolver__resolver_tests__function_redefinition_error.snap
---
source: crates/azalea-core/src/resolver/resolver_tests.rs
expression: "format!(\"Result: {:#?}\\nResolver: {:#?}\", result, resolver)"
---
Result: Err(
    RedefinedVariable(
        "test_func",
    ),
)
Resolver: Resolver {
    scopes: [
        Scope {
            variables: {},
            functions: {
                "test_func": Fn(
                    Function {
                        name: "test_func",
                        args: [
                            (
                                "x",
                                Int,
                            ),
                        ],
                        return_ty: String,
                        body: None,
                        body_expr: None,
                    },
                ),
            },
        },
    ],
}
