crates/azalea-core/src/resolver/snapshots/azalea_core__resolver__resolver_tests__undefined_variable.snap
---
source: crates/azalea-core/src/resolver/resolver_tests.rs
expression: "format!(\"Lookup: {:#?}\", resolver.lookup_variable(\"undefined\"))"
---
Lookup: None
