crates/azalea-core/src/resolver/snapshots/azalea_core__resolver__resolver_tests__valid_function_scoping.snap
---
source: crates/azalea-core/src/resolver/resolver_tests.rs
expression: "format!(\"{:#?}\", resolver)"
---
Resolver {
    scopes: [
        Scope {
            variables: {},
            functions: {
                "global_func": Fn(
                    Function {
                        name: "global_func",
                        args: [],
                        return_ty: Unit,
                        body: None,
                        body_expr: None,
                    },
                ),
            },
        },
    ],
}
